src/snapshots/similar__text__char_diff.snap
---
source: src/text.rs
expression: diff.ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 1,
    },
    Replace {
        old_index: 1,
        old_len: 1,
        new_index: 1,
        new_len: 1,
    },
    Equal {
        old_index: 2,
        new_index: 2,
        len: 5,
    },
    Replace {
        old_index: 7,
        old_len: 2,
        new_index: 7,
        new_len: 1,
    },
    Equal {
        old_index: 9,
        new_index: 8,
        len: 1,
    },
    Replace {
        old_index: 10,
        old_len: 1,
        new_index: 9,
        new_len: 1,
    },
]
